@@ -18,7 +18,6 @@ rm -f external/al_ext/assets3d/CMakeLists.txt
 rm -f external/al_ext/openvr/CMakeLists.txt
 rm -f external/al_ext/spatialaudio/CMakeLists.txt
 rm -f external/al_ext/statedistribution/CMakeLists.txt
-
 (
   if [[ "$OSTYPE" == "linux-gnu"* ]] || [[ "$OSTYPE" == "msys" ]] || [[ "$OSTYPE" == "cygwin" ]]; then
     mkdir -p ./bin
@@ -33,7 +32,7 @@ rm -f external/al_ext/statedistribution/CMakeLists.txt
 (
   if [ ! -d "./external/libsamplerate/build" ]; then
     if [[ "$OSTYPE" == "msys" ]] || [[ "$OSTYPE" == "cygwin" ]]; then
-      echo "BUILD LIBSAMPLERATE WINDOWS TODO"
+      echo "LIBSAMPLERATE not required for WINDOWS."
     else ## build libsamplerate for other unix based platforms.
       cmake -E make_directory external/libsamplerate/build
       cd external/libsamplerate/build
@@ -56,7 +55,9 @@ rm -f external/al_ext/statedistribution/CMakeLists.txt
       # cd xcode4
       # xcodebuild -scheme nfd build -project nfd.xcodeproj/ -configuration Release CFLAGS=-mmacosx-version-min=10.10 CXXFLAGS=-mmacosx-version-min=10.10
     elif [[ "$OSTYPE" == "msys" ]] || [[ "$OSTYPE" == "cygwin" ]]; then
-      echo "BUILD NFD WINDOWS TODO"
+      #DEPENDENT ON VISUAL STUDIO
+      cd vs2010/
+      msbuild.exe ./nfd.vcxproj //p:Configuration=Release //p:Platform=x64
     fi
   fi
 )
@@ -71,7 +72,6 @@ rm -f external/al_ext/statedistribution/CMakeLists.txt
   elif [[ "$OSTYPE" == "darwin"* ]]; then
     cmake -DCMAKE_BUILD_TYPE=Release -Wno-deprecated -DBUILD_EXAMPLES=0 -DRTAUDIO_API_JACK=0 -DRTMIDI_API_JACK=0 ../..
   elif [[ "$OSTYPE" == "msys" ]] || [[ "$OSTYPE" == "cygwin" ]]; then
-    echo "CONFIGURE WINDOWS RELEASE TODO"
     cmake -DCMAKE_BUILD_TYPE=Release -Wno-deprecated -DBUILD_EXAMPLES=0 -DRTAUDIO_API_JACK=0 -DRTMIDI_API_JACK=0 ../..
   fi
 )
@@ -86,7 +86,6 @@ rm -f external/al_ext/statedistribution/CMakeLists.txt
   elif [[ "$OSTYPE" == "darwin"* ]]; then
     cmake -DCMAKE_BUILD_TYPE=Debug -Wno-deprecated -DBUILD_EXAMPLES=0 -DRTAUDIO_API_JACK=0 -DRTMIDI_API_JACK=0 ../..
   elif [[ "$OSTYPE" == "msys" ]] || [[ "$OSTYPE" == "cygwin" ]]; then
-    echo "CONFIGURE WINDOWS DEBUG TODO"
     cmake -DCMAKE_BUILD_TYPE=Debug -Wno-deprecated -DBUILD_EXAMPLES=0 -DRTAUDIO_API_JACK=0 -DRTMIDI_API_JACK=0 ../..
   fi
 )
